# n64romconvert

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  _n64romconvert_wrapper.pyi  flake.nix  pyproject.toml  shell.nix
crates/n64romconvert/: Cargo.toml
crates/n64romconvert-wrapper/: Cargo.toml
crates/n64romconvert-wrapper/src/: functions.rs  lib.rs
crates/n64romconvert/src/: lib.rs
crates/n64romconvert_pybindings/: Cargo.toml  pyproject.toml
crates/n64romconvert_pybindings/src/: bindings.rs  lib.rs
n64romconvert/: Cargo.toml
pyn64romconvert/: Cargo.toml  pyproject.toml
pyn64romconvert/.github/workflows/: CI.yml
pyn64romconvert/src/: direct_api.rs  lib.rs
pyn64romconvert/src/bindings/: bindings.rs  mod.rs
src/: lib.rs  main.rs
src/n64romconvert/: __init__.py  converter.py
src/n64romconvert_tests/: __init__.py  test_romtype.py
tests/: README.md
