[package]
name = "n64romconvert"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
readme = "README.md"
license-file = "LICENSE.md"
description = "Small tool to help you convert between Nintendo 64 ROM formats, on the CLI."
documentation = "https://docs.rs/n64romconvert/latest/n64romconvert/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
