[package]
name = "n64romconvert-wrapper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ezntek/n64romconvert"
description = "Python wrapper functions for n64romconvert."
license = "MPL-2.0"

[lib]
name = "n64romconvert_wrapper"
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.1", features = [ "abi3-py38", "extension-module" ] }
n64romconvert = { path = "../n64romconvert" }
