[package]
name = "n64romconvert"
version = "1.0.3"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Convert between N64 ROM formats with ease."
documentation = "https://docs.rs/n64romconvert/latest/n64romconvert/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.164", features = ["derive"], default-features = false }
