[package]
name = "n64romconvert_pybindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "n64romconvert_pybindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.1"
n64romconvert = { path = "../n64romconvert" }
